syntax="proto3";
package chat_completion;
option go_package = "github.com/pkusunjy/openai-grpc-server/chat_completion";

service ChatService {
    rpc ask (ChatMessage) returns (ChatMessage) {}
    rpc chat (stream ChatMessage) returns (stream ChatMessage) {}
    rpc write_article_by_title (ChatMessage) returns (stream ChatMessage) {}
    rpc transcribe_judge (ChatMessage) returns (ChatMessage) {}
    // 雅思口语P1
    rpc ielts_speaking_p1_generate (ChatMessage) returns (stream ChatMessage) {}
    rpc ielts_speaking_p1_enrich (ChatMessage) returns (stream ChatMessage) {}
    // 雅思口语P2
    rpc ielts_speaking_p2_generate (ChatMessage) returns (stream ChatMessage) {}
    rpc ielts_speaking_p2_enrich (ChatMessage) returns (stream ChatMessage) {}
    rpc ielts_speaking_p2_score (ChatMessage) returns (stream ChatMessage) {}
    // 雅思口语P3
    rpc ielts_speaking_p3_generate (ChatMessage) returns (stream ChatMessage) {}
    rpc ielts_speaking_p3_enrich (ChatMessage) returns (stream ChatMessage) {}
    // 雅思写作T1
    rpc ielts_writing_t1_enrich (ChatMessage) returns (stream ChatMessage) {}
    rpc ielts_writing_t1_score (ChatMessage) returns (stream ChatMessage) {}
    // 雅思写作T2
    rpc ielts_writing_t2_generate (ChatMessage) returns (stream ChatMessage) {}
    rpc ielts_writing_t2_enrich (ChatMessage) returns (stream ChatMessage) {}
    rpc ielts_writing_t2_score (ChatMessage) returns (stream ChatMessage) {}
    // 高分词汇挖掘
    rpc ielts_speaking_words_synonyms (ChatMessage) returns (stream ChatMessage) {}
    rpc ielts_speaking_words_usage (ChatMessage) returns (stream ChatMessage) {}
    rpc ielts_writing_words_theme (ChatMessage) returns (stream ChatMessage) {}
    rpc ielts_writing_words_synonyms (ChatMessage) returns (stream ChatMessage) {}
    rpc ielts_writing_words_combination (ChatMessage) returns (stream ChatMessage) {}
    // 托福口语
    rpc toefl_speaking_p1_generate (ChatMessage) returns (stream ChatMessage) {}
    rpc toefl_speaking_p1_enrich (ChatMessage) returns (stream ChatMessage) {}
    rpc toefl_speaking_p1_score (ChatMessage) returns (stream ChatMessage) {}
    // 托福综合写作
    rpc toefl_writing_p1_enrich (ChatMessage) returns (stream ChatMessage) {}
    rpc toefl_writing_p1_score (ChatMessage) returns (stream ChatMessage) {}
    // 托福学术写作
    rpc toefl_writing_p2_enrich (ChatMessage) returns (stream ChatMessage) {}
    rpc toefl_writing_p2_score (ChatMessage) returns (stream ChatMessage) {}
    // 职场邮件
    rpc toefl_writing_p3_enrich (ChatMessage) returns (stream ChatMessage) {}
    rpc toefl_writing_p3_generate (ChatMessage) returns (stream ChatMessage) {}
    // 中英互译
    rpc cn_to_en (ChatMessage) returns (stream ChatMessage) {}
    rpc en_to_cn (ChatMessage) returns (stream ChatMessage) {}
    // 雅思口语陪练
    rpc ielts_speaking_exercise (ChatMessage) returns (ChatMessage) {}
    // 雅思口语模考
    rpc ielts_speaking_exam (ChatMessage) returns (ChatMessage) {}
};

message ChatMessage {
    uint64 logid = 1;
    uint64 uid = 2;
    string content = 3;
    uint32 stage = 4;
};

